HEAD
	+ Bug fix: off-by-one error on remote file search
	+ Bug fix: add lock to avoid overlapping between
	  backup processes (Closes #1680)
1.3.13
	+ Bug fix: add --force to delete old backup sets
	+ Bug fix: fix restoring of the first file
1.3.12
	+ Add page title
1.3.10
	+ Bugfix do not include '/' as it is already used as source directory
	+ Get rid of former local backup code
	+ Send events when backup is done
1.3.7
	+ Include configuration backup in backup
1.3.3
	+ an active event's  watcher is not longer needed for
	the cron job
	+ cron job is written on config regeneration