@@ -2,6 +2,8 @@ HEAD
 	+ Bug fix: off-by-one error on remote file search
 	+ Bug fix: add lock to avoid overlapping between
 	  backup processes (Closes #1680)
+	+ Added validation of parameters in RemoteSettings and notice
+	about SHH known hosts
 1.3.13
 	+ Bug fix: add --force to delete old backup sets
 	+ Bug fix: fix restoring of the first file
